--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^8.57.1",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "typescript": "^5.6.3",
