--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "url": "https://github.com/jesusgraterol/jesusgraterol.dev/issues"
   },
   "dependencies": {
+    "browser-style-normalizer": "^1.0.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "webfont-montserrat": "^1.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -53,11 +55,14 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "jsdom": "^25.0.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
     "vitest": "^2.1.3"
