--- a/package.json
+++ b/package.json
@@ -41,9 +41,16 @@
     "url": "https://github.com/jesusgraterol/jesusgraterol.dev/issues"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "browser-style-normalizer": "^1.0.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "webfont-montserrat": "^1.0.0"
   },
   "devDependencies": {
