Move more properties to the configuration file
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -2,6 +2,7 @@
   "name": "Jesus Graterol",
   "email": "jesusgraterol.dev@protonmail.com",
   "url": "https://jesusgraterol.dev",
+  "avatarPath": "avatar.png",
   "socialPages": {
     "github": "https://github.com/jesusgraterol",
     "linkedin": "https://www.linkedin.com/in/jesus-graterol",
