--- a/app.config.json
+++ b/app.config.json
@@ -3,6 +3,7 @@
   "email": "jesusgraterol.dev@protonmail.com",
   "url": "https://jesusgraterol.dev",
   "avatarPath": "avatar.png",
+  "resumePath": "resume.pdf",
   "socialPages": {
     "github": "https://github.com/jesusgraterol",
     "linkedin": "https://www.linkedin.com/in/jesus-graterol",
