--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "url": "https://github.com/jesusgraterol/jesusgraterol.dev/issues"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "browser-style-normalizer": "^1.0.6",
     "class-variance-authority": "^0.7.0",
