--- a/app.config.json
+++ b/app.config.json
@@ -8,5 +8,35 @@
     "linkedin": "https://www.linkedin.com/in/jesus-graterol",
     "twitter": "https://x.com/jesusgrat_dev",
     "kaggle": "https://www.kaggle.com/jesusgraterol"
-  }
+  },
+  "projects": [
+    {
+      "logo": "projects/balancer.png",
+      "name": "Balancer",
+      "description": "Balancer is a cutting-edge, open-source, self-hosted platform that empowers users to automate the Value Averaging Strategy for Bitcoin.",
+      "url": "https://balancer.jesusgraterol.dev/",
+      "githubURL": "https://github.com/bitcoin-balancer"
+    },
+    {
+      "logo": "projects/uipalettes.png",
+      "name": "uipalettes",
+      "description": "uipalettes is a Progressive Web App (PWA) that provides web developers access to a curated library of high-quality color palettes that fully comply with the Web Content Accessibility Guidelines (WCAG).",
+      "url": "https://uipalettes.web.app/",
+      "githubURL": "https://github.com/jesusgraterol/uipalettes"
+    },
+    {
+      "logo": "projects/published-packages.png",
+      "name": "Published Packages",
+      "description": "A collection of publicly released npm packages, designed to streamline and enhance your web development process. Discover a diverse collection of libraries, frameworks, and command-line tools (CLIs) tailored to various needs.",
+      "url": "https://www.npmjs.com/~jesusgraterol",
+      "githubURL": "https://github.com/jesusgraterol/published-packages"
+    },
+    {
+      "logo": "projects/kaggle-notebooks.png",
+      "name": "Kaggle Notebooks",
+      "description": "A collection of Jupyter Notebooks I've developed and shared publicly on Kaggle. Explore data analysis projects, machine learning models, and other insightful explorations across diverse datasets. Feel free to use, adapt, and contribute to these notebooks as you embark on your own data science journey!",
+      "url": "https://www.kaggle.com/jesusgraterol",
+      "githubURL": "https://github.com/jesusgraterol/kaggle-notebooks"
+    }
+  ]
 }
