--- a/app.config.json
+++ b/app.config.json
@@ -16,7 +16,7 @@
       "description": "Balancer is a cutting-edge, open-source, self-hosted platform that empowers users to automate the Value Averaging Strategy for Bitcoin.",
       "url": "https://balancer.jesusgraterol.dev/",
       "githubURL": "https://github.com/bitcoin-balancer",
-      "tags": ["TypeScript", "PostgreSQL", "Node.js", "Express.js", "React", "TailwindCSS"]
+      "tags": ["TypeScript", "PostgreSQL", "Node.js", "Express.js", "React", "TailwindCSS", "GNU Bash"]
     },
     {
       "logo": "projects/uipalettes.png",
@@ -24,7 +24,7 @@
       "description": "uipalettes is a Progressive Web App (PWA) that provides web developers access to a curated library of high-quality color palettes that fully comply with the Web Content Accessibility Guidelines (WCAG).",
       "url": "https://uipalettes.web.app/",
       "githubURL": "https://github.com/jesusgraterol/uipalettes",
-      "tags": []
+      "tags": ["TypeScript", "React", "TailwindCSS"]
     },
     {
       "logo": "projects/published-packages.png",
@@ -32,7 +32,7 @@
       "description": "A collection of publicly released npm packages, designed to streamline and enhance your web development process. Discover a diverse collection of libraries, frameworks, and command-line tools (CLIs) tailored to various needs.",
       "url": "https://www.npmjs.com/~jesusgraterol",
       "githubURL": "https://github.com/jesusgraterol/published-packages",
-      "tags": []
+      "tags": ["JavaScript", "TypeScript", "Node.js", "CSS", "GNU Bash"]
     },
     {
       "logo": "projects/kaggle-notebooks.png",
@@ -40,7 +40,7 @@
       "description": "A collection of Jupyter Notebooks I've developed and shared publicly on Kaggle. Explore data analysis projects, machine learning models, and other insightful explorations across diverse datasets. Feel free to use, adapt, and contribute to these notebooks as you embark on your own data science journey!",
       "url": "https://www.kaggle.com/jesusgraterol/code",
       "githubURL": "https://github.com/jesusgraterol/kaggle-notebooks",
-      "tags": []
+      "tags": ["Python", "TensorFlow", "Keras", "Pandas", "NumPy"]
     }
   ]
 }
