Complete experience section
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -45,7 +45,7 @@
   ],
   "positions": [
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/balancer.png",
       "dateRange": "Jun 2024 - Oct 2024",
       "positionName": "Full-Stack Web Developer",
       "companyName": "Balancer",
@@ -57,7 +57,7 @@
       ]
     },
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/epoca.png",
       "dateRange": "Feb 2022 - Oct 2023",
       "positionName": "Full-Stack Web Developer / Data Scientist",
       "companyName": "Epoca Technology",
@@ -71,7 +71,7 @@
       ]
     },
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/cw.png",
       "dateRange": "Aug 2016 - Jan 2022",
       "positionName": "Full-Stack Web Developer",
       "companyName": "CryptoWay",
@@ -88,7 +88,7 @@
       ]
     },
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/cem.png",
       "dateRange": "Jan 2015 - Jul 2016",
       "positionName": "Full-Stack Web Developer",
       "companyName": "CambiaelMundo",
@@ -101,7 +101,7 @@
       ]
     },
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/soluciones-inteligentes.png",
       "dateRange": "Jul 2014 - Feb 2015",
       "positionName": "Network & Computer Systems Administrator",
       "companyName": "Soluciones Inteligentes 9095, S.A",
@@ -111,7 +111,7 @@
       ]
     },
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/burnside.png",
       "dateRange": "Feb 2014 - Jun 2014",
       "positionName": "Data Analyst",
       "companyName": "Burnside City Council",
@@ -122,7 +122,7 @@
       ]
     },
     {
-      "logo": "projects/balancer.png",
+      "logo": "experience/cyberhive.png",
       "dateRange": "Dec 2010 - Feb 2014",
       "positionName": "Computer & Network Technician",
       "companyName": "Cyber Hive",
