Rename shadcn tech stack item
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -186,7 +186,7 @@
     },
     {
       "title": "Front-End",
-      "items": ["Angular", "React", "Tailwind CSS", "shadcn/ui", "Material", "Bootstrap", "Ionic", "Web API"]
+      "items": ["Angular", "React", "Tailwind CSS", "shadcn", "Material", "Bootstrap", "Ionic", "Web API"]
     },
     {
       "title": "Back-End",
