Add SQL to programming languages
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -177,7 +177,7 @@
   "techStack": [
     {
       "title": "Programming Languages",
-      "items": ["HTML", "CSS", "JavaScript", "TypeScript", "Python"]
+      "items": ["HTML", "CSS", "JavaScript", "TypeScript", "Python", "SQL"]
     },
     {
       "title": "Front-End",
